<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/root_RelativeLayout"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <Switch
            android:id="@+id/sw_ws1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:switchMinWidth="100dp"
            android:switchPadding="10dp"
            android:text="@string/pref_ws1_name_default"/>

        <Switch
            android:id="@+id/sw_ws2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:switchMinWidth="100dp"
            android:switchPadding="10dp"
            android:text="@string/pref_ws2_name_default"/>

        <Switch
            android:id="@+id/sw_ws3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:switchMinWidth="100dp"
            android:switchPadding="10dp"
            android:text="@string/pref_ws3_name_default"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_error_lan1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/warning_no_lan"
        android:textColor="@color/red"
        android:textSize="24sp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/tv_error_lan2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_error_lan1"
        android:layout_centerHorizontal="true"
        android:text="@string/warning_no_lan_please"
        android:visibility="invisible"/>
</RelativeLayout>
